--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-nodemon": "^0.3.0"
+    "grunt-nodemon": "^0.3.0",
+    "grunt-protractor-runner": "^1.1.4",
+    "grunt-shell": "^1.1.1",
+    "protractor": "^1.4.0"
   }
 }
